# carRentCPP

./: README.md
CarRental/: CMakeLists.txt  CarRental.cpp  CarRental.h  CarRental.sln  CarRental.vcxproj  CarRental.vcxproj.filters  CarRentalClient.cpp  CarRentalServer.cpp
CarRental/Client/: Client.cpp  Client.h  IClient.h
CarRental/DB/: Database.cpp  Database.h  FileDb.cpp  IDatabase.h
CarRental/DB/Files/: cars.txt  users.txt
CarRental/Include/: Errors.h  Utils.h
CarRental/Login/: DummyLogin.cpp  ILogin.h  Login.cpp  Login.h
CarRental/Processor/: Processor.cpp  Processor.h
CarRental/Sockets/: ISocket.h  Socket.cpp  Socket.h  WinSocket.cpp  WinSocket.h
